# AutoCoverLetterFiller

./:  CoverLetter.docx  .gitmodules  AutoCoverLetterFiller.cpp  AutoCoverLetterFiller.h  CHANGELOG.md  CMakeLists.txt  CoverLetter.docx  LICENSE.txt  README.md  template - Copy.docx  template.docx
example/:  CoverLetter.docx
src/: AutoCoverLetterFiller.cpp  AutoCoverLetterFiller.h  companyData.cpp  companyData.h  docxAdjuster.cpp  docxAdjuster.h  gui.cpp  gui.h  main.cpp
